revised set up instruction & fix Linkedin extractor bug

--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
     "https://sheets.googleapis.com/*"
   ],
   "oauth2": {
-    "client_id": "YOUR_CLIENT_ID.apps.googleusercontent.com",
+    "client_id": "238139299966-0o4kghcmkfrqee59i9699pilg6l90ukf.apps.googleusercontent.com",
     "scopes": [
       "https://www.googleapis.com/auth/spreadsheets"
     ]
